# switchboard-plug-power

./: .bzrignore  .travis.yml  CMakeLists.txt  INSTALL  Makefile  README.md  meson.build  plug.plugin  power.ui  power.vala
.github/workflows/: gettext.yml  main.yml  release.yml
cli/: CMakeLists.txt  Server.vala  Systemd.vala  elementary-logind-helper.service.in  io.elementary.logind.helper.conf  io.elementary.logind.helper.service.in  main.vala  meson.build
data/: icons.gresource.xml  io.elementary.switchboard.power.policy.in  meson.build  org.pantheon.switchboard.power.policy.cmake  pantheon-plug-power.desktop  pantheon-plug-power.destop  power.appdata.xml.in  power.metainfo.xml.in  power.plug  power.policy.in  power.ui
debian/: changelog  control  copyright  rules  switchboard-plug-power.install
po/: CMakeLists.txt  POTFILES  ae.po  af.po  ak.po  am.po  ar.po  as.po  ast.po  az.po  ba.po  be.po  bg.po  bh.po  bn.po  bo.po  br.po  bs.po  btk.po  ca.po  ce.po  ch.po  ckb.po  cr.po  cs.po  cu.po  cv.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  ff.po  (+94 more)
po/extra/: LINGUAS  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+159 more)
src/: ActionComboBox.vala  Battery.vala  BatteryView.vala  CMakeLists.txt  CliCommunicator.vala  ComboBox.vala  Device.vala  GreeterAccountsServicePlugin.vala  Interfaces.vala  Lid.vala  LidCloseActionComboBox.vala  LogindHelper.vala  MainView.vala  Permission.vala  Plug.vala  PowerManager.vala  PowerSupply.vala  TimeoutComboBox.vala  Translations.vala  Utils.vala  config.vala  meson.build  power.ui  power.vala
src/Services/: Battery.vala  Device.vala
src/Views/: BatteryView.vala  BehaviorView.vala  DeviceView.vala  DisplayView.vala  HardwareView.vala  MainView.vala  SuspendView.vala
src/Widgets/: ActionComboBox.vala  BatteryBox.vala  DevicesBox.vala  LidCloseActionComboBox.vala  LidCloseBox.vala  PowerModeButton.vala  TimeoutComboBox.vala
